<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="weight">Enter Weight (KG) :</string>
    <string name="height">Enter Height (CM) :</string>
    <string name="picture">Profile Picture</string>
    <string name="bmi">BMI :</string>
    <string name="under">Underweight</string>
    <string name="normal">Normal</string>
    <string name="over">Overweight</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="input_error">Input required</string>
</resources>